<resources>
    <string name="app_name">Hacker News</string>
    <string name="title_section_top">Top</string>
    <string name="title_section_best">Best</string>
    <string name="title_section_newest">Newest</string>
    <string name="title_section_show">ShowHN</string>
    <string name="title_section_show_new">ShowHN - New</string>
    <string name="title_section_more">More…</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_link">Show Link</string>
    <string name="show_comments">Show Comments</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="share">Share</string>
    <string name="readability">Readability</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="title_activity_about">About</string>
    <string name="hello_world">Hello world!</string>
    <string name="square">Square Inc.: Retrofit, OkHttp</string>
    <string name="square_license">Copyright 2013 Square, Inc. \nLicensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at     http://www.apache.org/licenses/LICENSE-2.0  Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="rtv">Evgeny Shishkin: RobotoTextView</string>
    <string name="rtv_license">Copyright 2013 Evgeny Shishkin \nLicensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at  http://www.apache.org/licenses/LICENSE-2.0  Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="scv">Alex Curran: ShowcaseView</string>
    <string name="scv_license">Copyright Alex Curran (+Alex) © 2012. \nAll rights reserved.  \nThis library is distributed under an Apache 2.0 License.</string>
    <string name="lva">Niek Haarman: ListViewAnimations</string>
    <string name="lva_license">Copyright 2013 Niek Haarman  \nLicensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at  http://www.apache.org/licenses/LICENSE-2.0  Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="dwak">Dinosaur With a Katana</string>
    <string name="website">Homepage and source code\nhttp://dwak.io/hacker-news-android/</string>
    <string name="title_activity_story_detail">Hacker News</string>
    <string name="title_section_settings">Settings</string>
    <string name="title_section_about">About</string>
    <string name="netflix_rxjava">Netflix : RxJava-Android</string>
    <string name="netflix_rxjava_license">Copyright 2012 Netflix, Inc. \n  Licensed under the Apache License, Version 2.0 (the "License");\n you may not use this file except in compliance with the License.\n You may obtain a copy of the License at\n http://www.apache.org/licenses/LICENSE-2.0\n  Unless required by applicable law or agreed to in writing, software\n distributed under the License is distributed on an "AS IS" BASIS,\n WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n See the License for the specific language governing permissions and\n limitations under the License.</string>
    <string name="facebook_rebound">Facebook : Rebound</string>
    <string name="facebook_rebound_license">BSD License\n  For Rebound software\n  Copyright © 2013, Facebook, Inc.\n All rights reserved.\n  Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:\n  * Redistributions of source code must retain the above copyright notice, this list of conditions and the following\n disclaimer.\n  * Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following\n disclaimer in the documentation and/or other materials provided with the distribution.\n  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES,\n INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE\n DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,\n SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR\n SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,\n WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF\n THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</string>
    <string name="fab_license">The MIT License (MIT)  Copyright © 2014 Oleksandr Melnykov  Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:  The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.  THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <string name="themeSum">The app-wide theme.</string>
    <string name="theme">Theme</string>
    <string name="title_settings">Settings</string>
    <string name="pref_system_browser_title">Open links in system browser</string>
    <string name="pref_system_browser_summary">Use system browser to open links</string>
    <string name="pref_link_first_title">Show link first</string>
    <string name="title_activity_login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="error">Error</string>
    <string name="complete">Complete</string>
    <string name="logout">Logout</string>
    <string name="pref_night_mode_title">Night Mode</string>
    <string name="title_newest">Newest</string>
    <string name="title_best">Best</string>
    <string name="title_top">Top</string>
    <string name="pref_comment_text_size">Comment Text size</string>
    <string name="pref_text_size_small">small</string>
    <string name="pref_text_size_medium">medium</string>
    <string name="pref_text_size_large">large</string>
    <string name="nav_drawer_add_an_account">Add an account</string>
    <string name="nav_drawer_login">Login</string>
    <string name="story_action_upvote">Upvote</string>
    <string name="story_action_save">Save</string>
    <string name="title_section_ask">Ask</string>
    <string name="delete_all">Delete All</string>
    <string name="comment_action_share_comment">Share Comment</string>
    <string name="comment_action_share_comment_content">Share Comment Content</string>
    <string name="action_open_in_browser_link">Link</string>
    <string name="action_open_in_browser_comments">Comments</string>
    <string name="action_share_link">Link</string>
    <string name="action_share_comments">Comments</string>
    <string name="story_details_error_toast_message">Problem loading page</string>
    <string name="story_list_error_toast_message">Unable to connect to API!</string>
    <string name="action_refresh_saved_stories">This will refresh all saved stories</string>
    <string name="action_refresh_save_in_progress">Refreshing all stories...</string>
    <string name="action_share_delete_all_stories">Delete all saved stories?</string>
    <string name="action_delete_in_progress_message">Deleting...</string>
    <string name="action_save_all_stories">Save all loaded stories?</string>
    <string name="action_save_all_stories_in_progress">Saving %d stories...</string>
    <string name="title_section_saved">Saved</string>
    <string name="logout_dialog_message">Are you sure you want to logout?</string>
    <string name="logout_confirm_button">Logout</string>
    <string name="story_detail_saved_banner">SAVED</string>
    <string name="story_action_delete">Delete</string>
    <string name="beta_prompt_message">There is a G+ community for the beta of this application! Wanna check it out?</string>
    <string name="beta_prompt_negative">Nah</string>
    <string name="action_reply">Reply</string>
    <string name="action_submit">Submit</string>
    <string name="submitting_progress">Submitting...</string>
    <string name="logan_square_license">Copyright 2015 BlueLine Labs, Inc.  Licensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at     http://www.apache.org/licenses/LICENSE-2.0  Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="dlruc_license">Copyright 2012 Jake Wharton Copyright 2011 The Android Open Source Project  Licensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at     http://www.apache.org/licenses/LICENSE-2.0  Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="pref_swipe_back_title">Swipe back to list</string>
</resources>