<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            tools:context="io.dwak.holohackernews.app.ui.about.AboutActivity$PlaceholderFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:padding="8dp"
                style="?commentListItem"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.devspark.robototextview.widget.RobotoTextView
                    app:typeface="roboto_black"
                    android:textColor="?textColor"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <com.devspark.robototextview.widget.RobotoTextView
                    app:typeface="roboto_light"
                    android:textColor="?textColor"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/dwak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:src="@drawable/dwakthreetone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <com.devspark.robototextview.widget.RobotoTextView
                    android:text="@string/website"
                    android:textColor="?textColor"
                    android:autoLink="web"
                    app:typeface="roboto_light"
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/retrofit"
                style="?commentListItem"
                android:padding="8dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.devspark.robototextview.widget.RobotoTextView
                    android:id="@+id/retrofit_title"
                    android:textColor="?textColor"
                    android:text="@string/square"
                    android:textSize="18sp"
                    app:typeface="roboto_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <com.devspark.robototextview.widget.RobotoTextView
                    android:id="@+id/retrofit_license"
                    android:textColor="?textColor"
                    android:textSize="14sp"
                    android:layout_marginTop="4dp"
                    android:layout_below="@id/retrofit_title"
                    android:text="@string/square_license"
                    app:typeface="roboto_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rxjava"
                android:padding="8dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                style="?commentListItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.devspark.robototextview.widget.RobotoTextView
                    android:id="@+id/rxjava_title"
                    android:textColor="?textColor"
                    android:text="@string/netflix_rxjava"
                    android:textSize="18sp"
                    app:typeface="roboto_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <com.devspark.robototextview.widget.RobotoTextView
                    android:id="@+id/rxjava_license"
                    android:textColor="?textColor"
                    android:textSize="14sp"
                    android:layout_marginTop="4dp"
                    android:layout_below="@id/rxjava_title"
                    android:text="@string/netflix_rxjava_license"
                    app:typeface="roboto_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rebound"
                android:padding="8dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                style="?commentListItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.devspark.robototextview.widget.RobotoTextView
                    android:id="@+id/rebound_title"
                    android:textColor="?textColor"
                    android:text="@string/facebook_rebound"
                    android:textSize="18sp"
                    app:typeface="roboto_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <com.devspark.robototextview.widget.RobotoTextView
                    android:id="@+id/rebound_license"
                    android:textColor="?textColor"
                    android:textSize="14sp"
                    android:layout_marginTop="4dp"
                    android:layout_below="@id/rebound_title"
                    android:text="@string/facebook_rebound_license"
                    app:typeface="roboto_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/roboto_text_view"
                android:padding="8dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                style="?commentListItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.devspark.robototextview.widget.RobotoTextView
                    android:id="@+id/rtv_title"
                    android:textColor="?textColor"
                    android:text="@string/rtv"
                    android:textSize="18sp"
                    app:typeface="roboto_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <com.devspark.robototextview.widget.RobotoTextView
                    android:id="@+id/rtv_license"
                    android:textColor="?textColor"
                    android:textSize="14sp"
                    android:layout_marginTop="4dp"
                    android:layout_below="@id/rtv_title"
                    android:text="@string/rtv_license"
                    app:typeface="roboto_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/listviewanimations"
                android:padding="8dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                style="?commentListItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.devspark.robototextview.widget.RobotoTextView
                    android:id="@+id/lva_title"
                    android:textColor="?textColor"
                    android:text="@string/lva"
                    android:textSize="18sp"
                    app:typeface="roboto_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <com.devspark.robototextview.widget.RobotoTextView
                    android:id="@+id/lva_license"
                    android:textColor="?textColor"
                    android:textSize="14sp"
                    android:layout_marginTop="4dp"
                    android:layout_below="@id/lva_title"
                    android:text="@string/lva_license"
                    app:typeface="roboto_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/floatingactionbutton"
                android:padding="8dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                style="?commentListItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.devspark.robototextview.widget.RobotoTextView
                    android:id="@+id/fab_title"
                    android:textColor="?textColor"
                    android:text="melnykov : FloatingActionButton"
                    android:textSize="18sp"
                    app:typeface="roboto_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <com.devspark.robototextview.widget.RobotoTextView
                    android:id="@+id/fab_license"
                    android:textColor="?textColor"
                    android:textSize="14sp"
                    android:layout_marginTop="4dp"
                    android:layout_below="@id/fab_title"
                    android:text="@string/fab_license"
                    app:typeface="roboto_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>
        </LinearLayout>
    </FrameLayout>


</ScrollView>
